--- a/values.yaml
+++ b/values.yaml
@@ -43,23 +43,6 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-
-
-
-  
-
-
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
 nodeSelector: {}
 
 tolerations: []
@@ -68,25 +51,28 @@ affinity: {}
 
 mailhog:
   resources: {}
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
+
   ingress:
     enabled: true
     className: ""
     annotations:
-      kubernetes.io/ingress.class: astronomer-nginx
+      # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
     hosts:
-      - host: mailhog.regtest001.astronomer-azuredev.com #chart-example.local
+      - host: example.local
         paths:
           - path: /
             pathType: ImplementationSpecific
-    #tls: []
+    tls: []
     #  - secretName: chart-example-tls
     #    hosts:
-    #      - chart-example.local
-    tls:
-      - secretName: astronomer-tls
-        hosts:
-          - mailhog.regtest001.astronomer-azuredev.com
+    #      - example.local
 
   service:
     type: ClusterIP
@@ -95,6 +81,12 @@ mailhog:
   
 stunnel:
   resources: {}
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
   service:
     type: ClusterIP
     port: 465
