add tls smtp port

--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -15,5 +15,9 @@ spec:
       targetPort: tcp-smtp
       protocol: TCP
       name: smtp
+    - port: {{ .Values.mailhog.service.port }}
+      targetPort: tls-smtp
+      protocol: TCP
+      name: tls-smtp
   selector:
     {{- include "mailhog-stunnel.selectorLabels" . | nindent 4 }}
