--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,3 +1,6 @@
+#############################################
+#         MailHog Stunnel Deployment        #
+#############################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
