--- a/values.yaml
+++ b/values.yaml
@@ -59,7 +59,7 @@ mailhog:
   #   memory: 128Mi
 
   ingress:
-    enabled: true
+    enabled: false
     className: ""
     annotations:
       # kubernetes.io/ingress.class: nginx
